--- a/src/Loader.css
+++ b/src/Loader.css
@@ -16,7 +16,7 @@
 }
 
 .loader {
-  animation: 2s loading infinite;
+  animation: 1500ms loading infinite;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -26,6 +26,7 @@
 }
 
 .loader .letter {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
+  border-radius: 8px;
 }
