--- a/src/Die.css
+++ b/src/Die.css
@@ -2,7 +2,7 @@
   border: 1px solid black;
   border-radius: 4px;
   cursor: pointer;
-  background-color: #cacaca;
+  background-color: #949494;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,7 +15,7 @@
 
 .die.active .letter {
   background-color: #c0e4ba;
-  box-shadow: 0px 15px 21px 10px #265430, 0px -15px 21px 10px #85cf87;
+  box-shadow: 0px -15px 21px 10px #85cf87;
 }
 
 .letter {
@@ -27,5 +27,5 @@
   height: 70px;
   text-align: center;
   border-radius: 20px;
-  box-shadow: 0px 15px 21px 10px #696969, 0px -15px 21px 10px #fff;
+  box-shadow: 0px -15px 21px 10px #d8d8d8;
 }
